bookstack.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bookstack-https-ingressroute
  labels:
    app: bookstack
    environment: dev
    resourceType: ingressroute
  namespace: bookstack
spec:
  entrypoint:
    - websecure
  routes:
  - kind: Rule
    match: Host(`wiki.test.com`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: bookstack-service
      port: 80
  tls:
    secretName: traefik-cert
    option:
    - namespace: bookstack
    domain:
    - main: test.com
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack-service
  labels:
    app: bookstack
    environment: dev
    resourceType: service
  namespace: bookstack
spec:
  selector:
    app: bookstack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: bookstack-deployment
  labels:
    app: bookstack
    environment: dev
    resourceType: deployment
  namespace: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
        environment: dev
        resourceType: pod
      namespace: bookstack
    spec: 
      nodeSelector:
        k8s.scaleway.com/pool-name: default
      restartPolicy: Always
      volumes:
      - name: log
        emptyDir: {}
      - name: public-uploads
        persistentVolumeClaim:
          claimName: bookstack-public-uploads-pvc
      - name: storage-uploads
        persistentVolumeClaim:
          claimName: bookstack-storage-uploads-pvc
      - name: config
        configMap:
          name: bookstack-config-configmap
          items:
          - key: .env
            path: .env
      containers:
      - image: solidnerd/bookstack:0.30.4
        name: bookstack
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        volumeMounts:
        - name: log
          mountPath: /var/log/apache2
        - name: public-uploads
          mountPath: "/var/www/bookstack/public/uploads"
        - name: storage-uploads
          mountPath: "/var/www/bookstack/storage/uploads"
        - name: config
          mountPath: /var/www/bookstack/.env
          subPath: .env
